# ddos_rcp

./: .env.example  .gitignore  docker-compose.yml
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  test.py  test2.py
api/.devcontainer/: devcontainer.json  docker-compose.yml
api/app/: env.py  main.py
api/app/controllers/crud/: __init__.py  game.py  result.py
api/app/controllers/rcp/: __init__.py  game_controller.py
api/app/models/: __init__.py  game.py  result.py
api/app/routers/: __init__.py  game.py  gamemgr.py  result.py
api/db-migration/: env.py
api/db-migration/versions/: de04480f9b12_init.py
frontend/: .env.example  Dockerfile  package.json
frontend/src/: App.tsx  AppWs.tsx  AppWsA.tsx  index.tsx
lb/: default.conf
